<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TelaInicial"
    tools:showIn="@layout/app_bar_tela_inicial">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:paddingBottom="0dp"
        android:text="@string/txt1_inical"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt2_inical"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/label1_inical"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/idEditTextInicial1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="0 - 60"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/label2_inical"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idEditTextInicial2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="0 - 24"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/label3_inical"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idEditTextInicial3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="0 - 24"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/label4_inical"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idEditTextInicial4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="60"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="66dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:onClick="continuar"
        android:text="@string/btn_continuar_inical"
        tools:background="#98FB98" />

</LinearLayout>